# tabra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benches/: completion.rs
docs/: generators.md
scripts/: compile-specs.mjs
specs/: apt.json  aws.json  brew.json  bun.json  cargo.json  cat.json  cd.json  chmod.json  chown.json  conda.json  cp.json  curl.json  deno.json  docker.json  find.json  gh.json  git.json  go.json  helm.json  kind.json  kubectl.json  ls.json  make.json  minikube.json  mkdir.json  mongosh.json  mv.json  mysql.json  nano.json  node.json  npm.json  npx.json  pip.json  pip3.json  pnpm.json  podman.json  psql.json  python.json  python3.json  rm.json  (+13 more)
src/: lib.rs  main.rs
src/daemon/: mod.rs
src/engine/: matcher.rs  mod.rs  parser.rs  resolver.rs
src/ipc/: async_client.rs  client.rs  mod.rs  protocol.rs  server.rs
src/render/: mod.rs  overlay.rs  theme.rs
src/session/: buffer_tracker.rs  event_loop.rs  integration.rs  keys.rs  mod.rs  osc.rs  popup.rs  pty.rs
src/shell/: bash_hook.rs  fish_hook.rs  hook.rs  mod.rs
src/spec/: loader.rs  types.rs
tests/: integration.rs  rendering.rs
